--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^2.0.3"
   },
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.10"
